# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: my_personal_actions.yml
gendiff/: __init__.py  diff_gen.py  gendiff.py  interface.py
gendiff/formatters/: json.py  json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  gendiff_script.py
tests/: test_flatten.py  test_flatten_jaml.py  test_flatten_json.py  test_json.py  test_nonflatten.py  test_nonflatten_jaml.py  test_nonflatten_json.py  true_answers.py
tests/fixtures/: correct_flatt_json.txt  correct_flatten_json.txt  correct_nested_json.txt  correct_nonflatten_json.txt  flatten_before.jaml  nonflatten_before.json
